Fix tl;dr looking weird on small displays

--- a/css/screen.scss
+++ b/css/screen.scss
@@ -167,6 +167,7 @@ article {
             background-color: #888;
             color: #fff;
             padding: 10px;
+            display: inline-block;
 
             &:before {
                 content: "tl;dr";
